[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/GFX/Interface/PNG/metalPanel.png" type="Texture" id=1]
[ext_resource path="res://Assets/GFX/Interface/PNG/glassPanel.png" type="Texture" id=2]
[ext_resource path="res://Assets/GFX/Interface/Fonts/kenvector_future_thin.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Interface/botao_normal.tres" type="StyleBox" id=4]
[ext_resource path="res://Assets/Interface/botao_selecionado.tres" type="StyleBox" id=5]
[ext_resource path="res://Assets/Interface/botao_pressinado.tres" type="StyleBox" id=6]
[ext_resource path="res://Assets/GFX/Interface/PNG/dotRed.png" type="Texture" id=7]
[ext_resource path="res://Assets/Scripts/PainelNumerico.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0, 0, 0, 1 )
Button/colors/font_color_pressed = Color( 0, 0, 0, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 3 )
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = ExtResource( 5 )
Button/styles/normal = ExtResource( 4 )
Button/styles/pressed = ExtResource( 6 )

[node name="PainelNumerico" type="Popup"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 400 )
theme = SubResource( 2 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 400 )
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 13.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 300.0
margin_bottom = 100.0

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/DisplayContainer"]
margin_left = 24.0
margin_right = 274.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 100 )
texture = ExtResource( 2 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Display" type="Label" parent="VBoxContainer/DisplayContainer"]
margin_left = 150.0
margin_top = 36.0
margin_right = 150.0
margin_bottom = 63.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.258824, 0.564706, 0.376471, 1 )

[node name="TecladoContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 140.0
margin_right = 300.0
margin_bottom = 360.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/TecladoContainer"]
margin_left = 38.0
margin_right = 262.0
margin_bottom = 220.0
custom_constants/vseparation = 20
custom_constants/hseparation = 52
columns = 3

[node name="Botao1" type="Button" parent="VBoxContainer/TecladoContainer/GridContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
text = "1"

[node name="Botao2" type="Button" parent="VBoxContainer/TecladoContainer/GridContainer"]
margin_left = 92.0
margin_right = 132.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
text = "2"

[node name="Botao3" type="Button" parent="VBoxContainer/TecladoContainer/GridContainer"]
margin_left = 184.0
margin_right = 224.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
text = "3"

[node name="Botao4" type="Button" parent="VBoxContainer/TecladoContainer/GridContainer"]
margin_top = 60.0
margin_right = 40.0
margin_bottom = 100.0
rect_min_size = Vector2( 40, 40 )
text = "4"

[node name="Botao5" type="Button" parent="VBoxContainer/TecladoContainer/GridContainer"]
margin_left = 92.0
margin_top = 60.0
margin_right = 132.0
margin_bottom = 100.0
rect_min_size = Vector2( 40, 40 )
text = "5"

[node name="Botao6" type="Button" parent="VBoxContainer/TecladoContainer/GridContainer"]
margin_left = 184.0
margin_top = 60.0
margin_right = 224.0
margin_bottom = 100.0
rect_min_size = Vector2( 40, 40 )
text = "6"

[node name="Botao7" type="Button" parent="VBoxContainer/TecladoContainer/GridContainer"]
margin_top = 120.0
margin_right = 40.0
margin_bottom = 160.0
rect_min_size = Vector2( 40, 40 )
text = "7"

[node name="Botao8" type="Button" parent="VBoxContainer/TecladoContainer/GridContainer"]
margin_left = 92.0
margin_top = 120.0
margin_right = 132.0
margin_bottom = 160.0
rect_min_size = Vector2( 40, 40 )
text = "8"

[node name="Botao9" type="Button" parent="VBoxContainer/TecladoContainer/GridContainer"]
margin_left = 184.0
margin_top = 120.0
margin_right = 224.0
margin_bottom = 160.0
rect_min_size = Vector2( 40, 40 )
text = "9"

[node name="Botao10" type="Button" parent="VBoxContainer/TecladoContainer/GridContainer"]
margin_top = 180.0
margin_right = 40.0
margin_bottom = 220.0
rect_min_size = Vector2( 40, 40 )
text = "0"

[node name="Luz" type="TextureRect" parent="VBoxContainer/TecladoContainer/GridContainer"]
margin_left = 92.0
margin_top = 180.0
margin_right = 132.0
margin_bottom = 220.0
texture = ExtResource( 7 )
expand = true

[node name="Botao11" type="Button" parent="VBoxContainer/TecladoContainer/GridContainer"]
margin_left = 184.0
margin_top = 180.0
margin_right = 224.0
margin_bottom = 220.0
rect_min_size = Vector2( 40, 40 )
text = "OK"

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
